<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/texto_ec"
            android:textColor="#000000"
            android:textSize="24dp"
            android:gravity="center"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_correo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_correo"
                android:textColor="#086F99"
                android:textSize="17dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            >

            <EditText
                android:id="@+id/caja_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="false" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_asunto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_asunto"
                android:textColor="#086F99"
                android:textSize="17dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/caja_asunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="285dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_mensaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_mensaje"
                android:textColor="#086F99"
                android:textSize="17dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/caja_mensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:height="100dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp">

        <Button
            android:id="@+id/btn_enviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#086F99"
            android:text="@string/texto_btn_enviar"
            android:textColor="#ffffff" />

    </LinearLayout>

</RelativeLayout>